--- a/index.html
+++ b/index.html
@@ -1558,27 +1558,37 @@ function calculateImpairment(angle, dataArray, angleKey, impairmentKey) {
         return 0;
     }
 
-    // For ulnar deviation, we need to find the matching positive angle in the data
+    // Handle radial and ulnar deviation
+    const isRadialDeviation = angleKey === 'radialDeviation';
     const isUlnarDeviation = angleKey === 'ulnarDeviation';
-    const adjustedAngle = isUlnarDeviation ? Math.abs(angle) : angle;
 
     for (let i = 0; i < dataArray.length; i++) {
         const currentAngle = dataArray[i][angleKey];
         const nextAngle = i < dataArray.length - 1 ? dataArray[i + 1][angleKey] : null;
 
-        console.log(`Checking: currentAngle = ${currentAngle}, nextAngle = ${nextAngle}, adjustedAngle = ${adjustedAngle}`);
+        console.log(`Checking: currentAngle = ${currentAngle}, nextAngle = ${nextAngle}, angle = ${angle}`);
 
         if (typeof currentAngle === 'string') {
-            if (currentAngle.startsWith('>') && adjustedAngle > parseFloat(currentAngle.substring(1))) {
+            if (currentAngle.startsWith('>') && angle > parseFloat(currentAngle.substring(1))) {
                 return dataArray[i][impairmentKey];
             }
-            if (currentAngle.startsWith('<') && adjustedAngle < parseFloat(currentAngle.substring(1))) {
+            if (currentAngle.startsWith('<') && angle < parseFloat(currentAngle.substring(1))) {
                 return dataArray[i][impairmentKey];
             }
-        } else if (adjustedAngle === Math.abs(currentAngle)) {
-            return dataArray[i][impairmentKey];
-        } else if (nextAngle !== null) {
-            if (adjustedAngle > Math.abs(currentAngle) && adjustedAngle <= Math.abs(nextAngle)) {
+        } else if (isRadialDeviation) {
+            if (angle === currentAngle || (nextAngle !== null && angle > currentAngle && angle <= nextAngle)) {
+                return dataArray[i][impairmentKey];
+            }
+        } else if (isUlnarDeviation) {
+            const absAngle = Math.abs(angle);
+            const absCurrentAngle = Math.abs(currentAngle);
+            const absNextAngle = nextAngle !== null ? Math.abs(nextAngle) : null;
+            
+            if (absAngle === absCurrentAngle || (absNextAngle !== null && absAngle > absCurrentAngle && absAngle <= absNextAngle)) {
+                return dataArray[i][impairmentKey];
+            }
+        } else {
+            if (angle === currentAngle || (nextAngle !== null && angle > currentAngle && angle <= nextAngle)) {
                 return dataArray[i][impairmentKey];
             }
         }
